# cpp_practice

./: .gitignore  Breadth_First_Search.cpp  README.md  c++.code-workspace  prac.cpp  practice.cpp  quickSort.cpp
algorithms/my_realizations/sort_algorithms/: bubbleSort.cpp  quickSort.cpp  selectionSort.cpp
algorithms/theory_of_algs/lab1/: lab1.cpp
data_structures/BST/: bst.cpp
data_structures/linked_lists/my_realizations/: doubly_linked_list.cpp  linked_list.cpp
data_structures/my_vector/: CMakeLists.txt  main.cpp
data_structures/my_vector/src/: vector.h  (+3 more)
practice/OOP/Cafe/: CMakeLists.txt
practice/OOP/Cafe/include/: cafe.h  cook.h  employee.h  manager.h  menuItem.h  order.h  waiter.h
practice/OOP/Cafe/src/: cafe.cpp  cook.cpp  employee.cpp  main.cpp  manager.cpp  menuItem.cpp  order.cpp  waiter.cpp
practice/OOP/Farm/: CMakeLists.txt
practice/OOP/Farm/include/: animal.h  farm.h  farmEntity.h  plant.h
practice/OOP/Farm/src/: animal.cpp  farm.cpp  farmEntity.cpp  main.cpp  plant.cpp
practice/Pracs/: compress_string.cpp  sobesAllPracs.cpp  sobesPrac.cpp  sobesVector.cpp  topElemets.cpp  vectorDelDubl.cpp
practice/spectrum/: CpuMonitor.cpp  CpuMonitor.h  CpuStat.cpp  CpuStat.h  MemStat.cpp  MemStat.h  main.cpp
practice/sysInfo/: procChecker.cpp
practice/task_manager/: CMakeLists.txt
practice/task_manager/include/: task.h  taskManager.h
practice/task_manager/src/: main.cpp  task.cpp  taskManager.cpp
search_algorithms/: binary.cpp
system_programming/my_library/: main_static.cpp
system_programming/processes/: cat.cpp  run.cpp  runProcess.cpp
(+104 files in other folders)
